# impuls_energy_trading_cc

./: .gitignore  impuls_energy_trading_cc.code-workspace  readme.md
app/: .flake8  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt
app/.weather_prog/logs/: 2022-12-22_weather_prog_log.json
app/src/weather_prog/: __init__.py  __main__.py  _logging.py  _settings.py  _utils.py
app/src/weather_prog/api/: __init__.py  api.py  error.py  models.py
app/src/weather_prog/cli/: __init__.py  __main__.py  _utils.py  main.py
app/tests/test_weather_prog/: __init__.py  conftest.py  models.py  test_weather_prog_version.py
app/tests/test_weather_prog/test_api/: __init__.py  test_api.py
app/tests/test_weather_prog/test_cli/: __init__.py  test_main.py
